--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
         "prettier": "^2.8.8",
         "tailwindcss": "^3.3.1",
         "vite": "^4.2.0"
-    }
+    },
+    "tags": [
+        "swiper"
+    ]
 }
