--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.4.0",
         "daisyui": "^2.51.6",
         "firebase": "^9.21.0",
+        "framer-motion": "^10.12.6",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
