--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.8.0",
+        "react-lazyload": "^3.2.0",
         "react-lottie": "^1.2.3",
         "react-router-dom": "^6.10.0",
         "sort-by": "^1.2.0",
