--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
         "firebase": "^9.21.0",
         "framer-motion": "^10.12.6",
         "jspdf": "^2.5.1",
+        "leaflet": "^1.9.3",
         "localforage": "^1.10.0",
+        "mapbox-gl": "^2.14.1",
         "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^4.8.0",
         "react-lazyload": "^3.2.0",
+        "react-leaflet": "^4.2.1",
         "react-lottie": "^1.2.3",
         "react-router-dom": "^6.10.0",
         "sort-by": "^1.2.0",
