--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-lazyload": "^3.2.0",
         "react-leaflet": "^4.2.1",
         "react-lottie": "^1.2.3",
+        "react-rating-stars-component": "^2.2.0",
         "react-router-dom": "^6.10.0",
         "sort-by": "^1.2.0",
         "swiper": "^9.2.4"
